# yolo

./: .gitignore  .gitmodules  .prettierignore  .shellcheckrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  VERIFICATION.md  fix_namespace.py  fix_test.py  install-yolo-mcp.sh  main.py  marketplace.json  pyproject.toml  release-please-config.json  replace_scripts.py
yolo-mcp-server/: Cargo.toml  llvm-cov.toml
yolo-mcp-server/src/: bootstrap_claude.rs  cli.rs  infer_project_context.rs  jsonrpc.rs  main.rs  phase_detect.rs  session_start.rs  state_updater.rs  statusline.rs  suggest_next.rs  telemetry.rs  token_baseline.rs  tools.rs
yolo-mcp-server/src/cli/: mod.rs  router.rs
yolo-mcp-server/src/commands/: artifact_registry.rs  assess_plan_risk.rs  atomic_io.rs  auto_repair.rs  bootstrap_all.rs  bootstrap_claude.rs  bootstrap_project.rs  bootstrap_requirements.rs  bootstrap_roadmap.rs  bootstrap_state.rs  bump_version.rs  cache_context.rs  cache_nuke.rs  check_regression.rs  clean_stale_teams.rs  collect_metrics.rs  commit_lint.rs  compile_progress.rs  compile_rolling_summary.rs  compress_context.rs  config_read.rs  contract_revision.rs  delta_files.rs  detect_stack.rs  diff_against_plan.rs  doctor_cleanup.rs  domain_types.rs  extract_changelog.rs  feature_flags.rs  generate_contract.rs  generate_gsd_index.rs  generate_incidents.rs  git_state.rs  hard_gate.rs  help_output.rs  infer_gsd_summary.rs  infer_project_context.rs  install_hooks.rs  lease_lock.rs  list_todos.rs  (+44 more)
yolo-mcp-server/src/hooks/: agent_health.rs  agent_pid_tracker.rs  agent_start.rs  (+21 more)
(+1722 files in other folders)
