[package]
name = "yolo-mcp-server"
version = "2.9.6"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
filetime = "0.2.27"
jsonschema = "0.28"
libc = "0.2"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
signal-hook = "0.3"
sysinfo = "0.38.2"
toml_edit = "0.22"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "yolo-mcp-server"
path = "src/main.rs"

[[bin]]
name = "yolo"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.25.0"
